[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", optional = true }
thiserror = "2"
tokio ={version ="1",features = ["rt-multi-thread", "time", "sync"]}
tracing = "0.1"
dashmap = "6"
futures-timer = "3.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
[features]
default = []
serde = ["dep:serde", "serde_json"]
devtools = ["dep:gpui-component"]

[lib]
name = "rs_query"
path = "src/lib.rs"

[package]
authors = ["elcoosp"]
autobenches = false
autobins = false
autoexamples = false
autolib = false
autotests = false
build = false
categories = ["asynchronous", "caching", "gui"]
description = "TanStack Query-inspired async state management for GPUI"
documentation = "https://docs.rs/rs-query"
edition = "2021"
exclude = ["docs/*", ".github/*", ".DS_Store"]
keywords = ["gpui", "query", "async", "cache", "tanstack"]
license = "MIT"
name = "rs-query"
readme = "README.md"
version = "0.0.1"
